@@ -1,0 +1,4 @@
+{
+  "type": "valoria:suspicious_iceberg",
+  "config": {}
+}
